Changed colour of the background

--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@ body {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: linear-gradient(to right, #875b91, #81427e);
+  background: linear-gradient(to right, #705b91, #292962);
   color: #333;
 }
 
